--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "electron-squirrel-startup": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-scripts": "^5.0.1",
     "zustand": "^4.5.2"
   }
 }
