--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "electron": "31.0.1",
     "eslint": "^8.0.1",
     "eslint-plugin-import": "^2.25.0",
+    "leva": "^0.9.35",
     "ts-node": "^10.0.0",
     "typescript": "~4.5.4",
     "vite": "^5.0.12"
